infrastructure/my-cluster/flagger-istio-canary/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: test
  labels:
    app: my-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: my-app
